--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=example
 
+spring.profiles.active = dev
 my.custom.property = Hello Raz Subedi
 my.custom.property.int = 100
